<resources>
    <string name="app_name" translatable="false">Neo Feed</string>
    <string name="home">Home</string>
    <string name="app_id" translatable="false">Package</string>
    <string name="app_version" translatable="false">Version</string>
    <string name="app_build" translatable="false">Build</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_sources">Data sources</string>
    <string name="summary_sources">Add or remove sources</string>
    <string name="date_format_day_month" translatable="false">%1$d %2$s</string>
    <string name="date_format_day_month_year" translatable="false">%1$d %2$s %3$d</string>
    <string name="date_ago_now">now</string>
    <string name="date_at">at</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="yesterday">yesterday</string>
    <string name="pref_cat_contact">Contacts</string>
    <string name="about_team">Team Members</string>
    <string name="about_channel">Channel</string>
    <string name="about_community">Community</string>
    <string name="about_community_telegram">Community on Telegram</string>
    <string name="about_community_matrix">Community on Matrix</string>
    <string name="about_developer" translatable="false">Saul Henriquez</string>
    <string name="about_developer2" translatable="false">Antonios Hazim</string>
    <string name="about_build_information">Build info</string>
    <string name="author_role">Developer</string>
    <string name="about_licenses">License</string>
    <string name="back_to_top">Back to Top</string>
    <string name="about_changelog">Changelog</string>
    <string name="about_open_source">Open Source Libraries</string>
    <string name="pref_tg">Telegram channel</string>
    <string name="about_source_code">Source code</string>
    <string name="pref_cat_debug">Debug</string>
    <string name="pref_browser_theme">Open in Browser</string>
    <string name="pref_offline_reader">Offline reader</string>
    <string name="pref_items_per_feed">Max items per feed</string>
    <string name="pref_compact">Compact item layout</string>
    <string name="pref_card_bg">Card background</string>
    <string name="pref_bg_color">Overlay background</string>
    <string name="allow_notify_to_settings">Open settings</string>
    <string name="overlay_no_permission">No permission granted</string>
    <string name="overlay_reload">Click here to reload</string>
    <string name="overlay_no_permission_desc">HomeFeeder needs \"Notification access\" to show notifications atop other apps.</string>
    <string name="overlay_no_permission_snackbar">Please verify you have allowed \"Notification access\" permission and try again.</string>
    <string name="action_reload">Reload</string>
    <string name="action_restart">Restart app</string>
    <string name="pm_empty">No sources installed</string>
    <string name="pm_desc">HomeFeeder uses them to display data</string>
    <string name="add_rss">Add new RSS</string>
    <string name="failed_to_parse">Could not parse %1$s</string>
    <string name="edit_rss">Edit Feed Item</string>
    <string name="add_input_hint" translatable="false">URL</string>
    <string name="title">Title</string>
    <string name="source_tags">Tags</string>
    <string name="description">Description</string>
    <string name="add_feed_search_hint">Feed URL</string>
    <string name="invalid_url">Not a valid URL</string>
    <string name="go_back">Go back</string>
    <string name="remove_title">Confirm action</string>
    <string name="remove_desc">Remove %s from feed sources\?</string>
    <string name="remove_action_yes">Yes</string>
    <string name="news_image_text">news story image</string>
    <string name="title_feed_list">Feed List</string>
    <string name="debug_logcat_printing">Extensive logcat printing</string>
    <string name="debug_content_printing">Log notification content</string>
    <string name="summary_feed_list">Add or remove RSS sources</string>
    <string name="source_code_url" translatable="false">https://github.com/NeoApplications/Neo-Feed</string>
    <string name="telegram_channel" translatable="false">t.me/neo_launcher</string>
    <string name="title_plugin_list">Plugin List</string>
    <string name="touch_to_play_video">Touch to play video</string>
    <string name="fetch_full_articles_by_default">Fetch full articles by default</string>
    <string name="article_not_found">Local article not found</string>
    <string name="no_articles_found">No articles found</string>
    <string name="on_date" translatable="false">%1$s</string>
    <string name="by_author_on_date">%1$s, %2$s</string>
    <string name="pref_cat_overlay">Appearance</string>
    <string name="pref_syscolors">Use system wallpaper colors</string>
    <string name="pref_syscolors_desc">instead of \"Launcher:\" options</string>
    <string name="pref_syscolors_disabled">Requires Android 8.1 or newer</string>
    <string name="pref_transparency">Overlay background opacity</string>
    <string name="pref_dynamic_color">Dynamic Color</string>
    <string name="pref_ovr_theme">Overlay theme</string>
    <string name="background_theme_option">Theme based</string>
    <string name="theme_auto_system_black">Automatically (from system; black)</string>
    <string name="theme_black">Black</string>
    <string name="background_white">White</string>
    <string name="background_primary_color">Launcher: Primary color</string>
    <string name="background_secondary_color">Launcher: Secondary color</string>
    <string name="background_tertiary_color">Launcher: Tertiary color</string>
    <string name="transparency_non_transparent">Non Transparent</string>
    <string name="transparency_low_transparency">75% transparent</string>
    <string name="transparency_mid_transparency">50% transparent</string>
    <string name="transparency_high_transparency">25% transparent</string>
    <string name="transparency_transparent">Transparent</string>
    <string name="theme_auto_launcher">Automatically (from launcher)</string>
    <string name="theme_auto_system">Automatically (from system)</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="source_enabled">Is Enabled</string>
    <string name="sources_import_opml">Import feeds from OPML</string>
    <string name="sources_export_opml">Export feeds to OPML</string>
    <string name="failed_to_import_OPML">"Failed to import OPML"</string>
    <string name="failed_to_export_OPML">"Failed to export OPML"</string>
    <string name="share">Share</string>
    <string name="delete_feed">Delete feed</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_remove">Remove bookmark</string>
    <string name="action_show_bookmarks">Show bookmarks</string>
    <string name="action_hide_bookmarks">Hide bookmarks</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="summary_bookmarks">See your bookmarked articles</string>
    <string name="title_service">Service</string>
    <string name="title_other">Other</string>
    <string name="no_activity_for_link">Web browser not found</string>
    <string name="title_overlay">Overlay</string>
    <string name="add_feed">Add feed</string>
    <string name="pref_remove_duplicates">Remove duplicate article from different sources</string>
    <string name="sort_filter">Sort and filter</string>
    <string name="state_modified">Modified</string>
    <string name="action_apply">Apply</string>
    <string name="action_reset">Reset</string>
    <string name="sorting_order">Sorting order</string>
    <string name="sorting_chronological">Chronological</string>
    <string name="sorting_title">Title</string>
    <string name="sorting_source">Source</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="item_selected">Item selected</string>
    <string name="collapse_handle_description">Drag to collapse bottom sheet</string>
    <string name="section_icon_description">Section icon</string>
    <string name="expand_section_description">Expand section</string>
    <string name="collapse_section_description">Collapse section</string>
    <string name="date_at_time_FORMAT">%1$s at %2$s</string>
    <string name="draw_permission_required">This application requires the permission to draw over other apps, without it feed items would not open on click</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="file_share_text">File from Neo Feed</string>
    <string name="sources_import_bookmarks">Import bookmarks</string>
    <string name="sources_export_bookmarks">Export bookmarks</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_open_smry">Open in SMRY</string>
    <string name="pref_cat_filters">Filters</string>
    <string name="pref_blocked_words">Blocked words</string>
    <string name="pref_blocked_words_summary">Hide articles containing these words</string>
    <string name="blocked_words_title">Blocked words</string>
    <string name="blocked_words_hint">Add a word</string>
    <string name="blocked_words_add">Add</string>
    <string name="blocked_words_empty">No blocked words</string>
    <string name="pref_cat_weather">Weather</string>
    <string name="pref_show_weather">Weather source</string>
    <string name="pref_show_weather_summary">Tap to choose the weather source</string>
    <string name="pref_weather_unit">Temperature unit</string>
    <string name="pref_weather_unit_celsius">Celsius (°C)</string>
    <string name="pref_weather_unit_fahrenheit">Fahrenheit (°F)</string>
    <string name="pref_weather_city">Custom city</string>
    <string name="pref_weather_city_summary">Set city name or leave blank for automatic location</string>
    <string name="weather_api_key">OWM API Key</string>
    <string name="owm_get_your_own_key">Get an API key at api.openweathermap.org.</string>
    <string name="weather_loading">Loading weather…</string>
    <string name="weather_error">Could not load weather</string>
    <string name="weather_tap_to_retry">Tap to retry</string>
    <string name="weather_feels_like">Feels like %1$s</string>
    <string name="weather_humidity">Humidity: %1$d%%</string>
    <string name="weather_wind">Wind: %1$s km/h</string>
    <string name="weather_precipitation">Precipitation: %1$s mm</string>
    <string name="weather_max_min">H: %1$s  L: %2$s</string>
    <string name="weather_enable_location">Grant location permission</string>
    <string name="weather_location_permission_required">Location permission is required for automatic local weather</string>
    <string name="weather_location_disabled">Location service is disabled</string>
    <string name="weather_forecast_hourly">Hourly forecast</string>
    <string name="weather_details_title">Weather Details</string>
    <string name="weather_code_clear">Clear sky</string>
    <string name="weather_code_mainly_clear">Mainly clear</string>
    <string name="weather_code_partly_cloudy">Partly cloudy</string>
    <string name="weather_code_overcast">Overcast</string>
    <string name="weather_code_fog">Fog</string>
    <string name="weather_code_drizzle">Drizzle</string>
    <string name="weather_code_rain">Rain</string>
    <string name="weather_code_heavy_rain">Heavy rain</string>
    <string name="weather_code_snow">Snow</string>
    <string name="weather_code_thunderstorm">Thunderstorm</string>
    <string name="weather_provider_owm" translatable="true">OpenWeatherMap</string>
</resources>