<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Neo Feed
  ~ Copyright (c) 2025   Neo Feed Team
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sort_filter_sheet"
    android:paddingTop="28dp"
    android:background="@drawable/bottom_sheet_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <View
        android:id="@+id/collapse_handle"
        android:layout_width="48dp"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/textColorSecondary" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_sorting_order"
            android:text="@string/sorting_order"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_sort_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sort_chronological"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/sorting_chronological"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:checkable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sort_title"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/sorting_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sort_source"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sorting_source"
                android:checkable="true" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_sort_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sort_asc"
                android:text="@string/sort_ascending"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:layout_weight="1"
                android:checked="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sort_desc"
                android:text="@string/sort_descending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkable="true"
                android:checked="false"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/colorPrimary"
            android:layout_marginVertical="12dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_sources"
            android:text="@string/title_sources"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_deselect_all_sources"
            android:text="@string/deselect_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/all_sources_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/colorPrimary"
            android:layout_marginVertical="12dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tags"
            android:text="@string/source_tags"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_deselect_all_tags"
                android:text="@string/deselect_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/all_tags_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                android:text="@string/action_reset"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_apply"
                android:text="@string/action_apply"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>


