<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true"
    android:clipChildren="true"
    android:orientation="vertical">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_sort_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sort_chronological"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorting_chronological"
            android:checked="true"
            android:checkable="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sort_title"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorting_title"
            android:checkable="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sort_source"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorting_source"
            android:checkable="true" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_sort_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sort_asc"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sort_ascending"
            android:checkable="true"
            android:checked="true"
            app:icon="@drawable/ic_sort_ascending"
            app:iconGravity="start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sort_desc"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sort_descending"
            android:checkable="true"
            android:checked="false"
            app:icon="@drawable/ic_sort_descending"
            app:iconGravity="end" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
</LinearLayout>